website/versioned_docs/version-2.0.0/commands/Get-MtHtmlReport.mdx
---
sidebar_class_name: hidden
description: Generates a formatted html report using the MaesterResults object created by ConvertTo-MtMaesterResult
id: Get-MtHtmlReport
title: Get-MtHtmlReport
hide_title: false
hide_table_of_contents: false
custom_edit_url: https://github.com/maester365/maester/blob/main/powershell/public/Get-MtHtmlReport.ps1
---

## SYNOPSIS

Generates a formatted html report using the MaesterResults object created by ConvertTo-MtMaesterResult

## SYNTAX

```powershell
Get-MtHtmlReport [-MaesterResults] <PSObject> [-ProgressAction <ActionPreference>] [<CommonParameters>]
```

## DESCRIPTION

The generated html is a single file that provides a visual representation of the test
results with a summary view and click through of the details.

## EXAMPLES

### EXAMPLE 1

```powershell
$pesterResults = Invoke-Pester -PassThru
$maesterResults = ConvertTo-MtMaesterResult $pesterResults
$output = Get-MtHtmlReport -MaesterResults $maesterResults
$output | Out-File -FilePath $out.OutputHtmlFile -Encoding UTF8
```

This example shows how to generate the html report and save it to a file by using Invoke-Pester

### EXAMPLE 2

```powershell
$maesterResults = Invoke-Maester -PassThru
$output = Get-MtHtmlReport -MaesterResults $maesterResults
$output | Out-File -FilePath $out.OutputHtmlFile -Encoding UTF8
```

This example shows how to generate the html report and save it to a file by using Invoke-Maester

## PARAMETERS

### -MaesterResults

The Maester test results returned from `Invoke-Pester -PassThru | ConvertTo-MtMaesterResult`

```yaml
Type: PSObject
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ProgressAction

\{\{ Fill ProgressAction Description \}\}

```yaml
Type: ActionPreference
Parameter Sets: (All)
Aliases: proga

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[https://maester.dev/docs/commands/Get-MtHtmlReport](https://maester.dev/docs/commands/Get-MtHtmlReport)
